# text_render

./: .editorconfig  .gitignore  CMakeFunctions.cmake  CMakeLists.txt  README.md  build.cmd  build_all.cmd  vcpkg.json
src/: CMakeLists.txt
src/kk_os_render/: CMakeLists.txt  os_render_backend.hh  os_render_opengl.cc  os_render_vulkan.cc
src/kk_os_window/: CMakeLists.txt  os_window.cc  os_window.hh  os_window_UTILS.cc  os_window_UTILS.hh  os_window_config.hh
src/kr_render/: CMakeLists.txt  KR_kids_UTF8_text.hh  KR_kids_api_fwd.hh  KR_kids_config.hh  KR_kids_font.cc  KR_kids_font.hh  KR_kids_font_fallback.cc  KR_kids_font_fallback.hh  KR_kids_image.cc  KR_kids_image.hh  KR_kids_render.cc  KR_kids_render.hh  KR_render_utils.cc  KR_render_utils.hh  KR_text_shaper.cc  KR_text_shaper.hh
src/ks_base/: CMakeLists.txt  KS_asserts.cc  KS_asserts.hh  KS_basic_math.hh
src/test_HWND/: CMakeLists.txt  main.cc
